# telegram-client-mcp

ai-frontend-communication/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  PROJECT_SPEC.md  README.md  alembic.ini  compose.yaml  pyproject.toml
ai-frontend-communication/docs/: OPERATIONS.md  TELEGRAM_10_2.md
ai-frontend-communication/migrations/: env.py  script.py.mako
ai-frontend-communication/migrations/sql/: 20260721_101215_admin_access.down.sql  20260721_101215_admin_access.up.sql  20260721_141954_control_plane.down.sql  20260721_141954_control_plane.up.sql  20260722_043616_agent_memory.down.sql  20260722_043616_agent_memory.up.sql  20260722_055954_repo_webhook.down.sql  20260722_055954_repo_webhook.up.sql  20260722_162217_01_request_meta.down.sql  20260722_162217_01_request_meta.up.sql  20260722_163207_02_context.down.sql  20260722_163207_02_context.up.sql  20260722_183500_agent_limits.down.sql  20260722_183500_agent_limits.up.sql  744685d9ddd2.down.sql  744685d9ddd2.up.sql  91d7cfe41a2b.down.sql  91d7cfe41a2b.up.sql
ai-frontend-communication/ops/: dca.env.example  deploy.sh  install.sh  test-deploy.sh
ai-frontend-communication/tests/: test_app.py  test_bootstrap.py  test_claude.py  test_claude_oauth.py  test_control_plane.py  test_domain.py  test_integration.py  test_mcp.py  test_memory.py  test_migrations.py  test_privacy.py  test_repositories.py  test_telegram.py  test_worker.py
ai-frontend-communication/web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
(+48 files in other folders)
