[project]
name = "developer-communication-agent"
version = "0.1.0"
description = "Telegram bridge between developers, code repositories and external AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram[proxy]==3.30.0",
  "alembic>=1.16,<2",
  "argon2-cffi>=25,<26",
  "fastapi>=0.116,<1",
  "itsdangerous>=2.2,<3",
  "mcp>=1.27,<2",
  "orjson>=3.11,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "redis>=6,<7",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25,<26",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
dca-api = "dca.app:run"
dca-worker = "dca.worker:run"
dca-bootstrap = "dca.bootstrap:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dca"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101", "RUF001"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires an explicitly configured local PostgreSQL test database"]
